// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tracks /> renders correctly with tracks 1`] = `
<section
  className="tracks"
>
  <AudioManager />
  <Track
    id="track1"
  />
  <Track
    id="track2"
  />
</section>
`;

exports[`<Tracks /> renders correctly without tracks 1`] = `
<section
  className="tracks"
>
  <AudioManager />
  <div
    className="no-tracks"
  >
    no tracks
  </div>
</section>
`;
